--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/envelop.css" rel="stylesheet">
+    <link href="css/envelop.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Document</title>
 </head>
@@ -50,6 +50,6 @@
             </div>       
         </div>
     </div>
-    <script src="/js/envelop.js"></script>
+    <script src="js/envelop.js"></script>
 </body>
 </html>
