--- a/index.html
+++ b/index.html
@@ -24,16 +24,11 @@
                 </div>
                 <div class="parrot hidden" id="parrot">
                     <div class="text-header">
-                        <p>Hi Ma'am/Sir</p>
+                        <p>Hi,</p>
                     </div>
                     <div class="text-body">
-                        <p>You’re invited to celebrate a special day as we honor my own birthday! Join us for a fun-filled gathering with friends, laughter, and unforgettable memories.</p>
+                        <p>I'd like you to know that you're cute! <3</p>
                     </div>
-                    <div class="text-footer">
-                        <p>Date: October 11, 2024 Friday</p>
-                        <p>Time: 4:30 PM</p>
-                        <p>Location: @ <a href="https://www.google.com/maps/place/12+Peace,+Quezon+City,+Metro+Manila/@14.6705945,121.0064473,18z/data=!3m1!4b1!4m6!3m5!1s0x3397b6be4ed6b8eb:0xcc40815741f6fb60!8m2!3d14.670593!4d121.0071868!16s%2Fg%2F11tcwl7st9?entry=ttu&g_ep=EgoyMDI0MTAwMi4xIKXMDSoASAFQAw%3D%3D" target="_blank">Madam Erika Ligot's House</a></p>
-                    </div>            
                 </div>     
                 <div class="words line1"></div>
                 <div class="words line2"></div>
